fix(modal): align spacing pattern to other code

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -116,7 +116,7 @@
       .#{$prefix}--modal-header,
       .#{$prefix}--modal-content,
       .#{$prefix}--modal-content__regular-content {
-        padding-right: rem(16px);
+        padding-right: 1rem;
       }
     }
   }
